--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-numpy
-pandas
-scikit-learn
-librosa
-joblib
-plotly
-tensorflow
-Pillow
-matplotlib
-tqdm
+streamlit==1.33.0
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.4.2
+librosa==0.10.1
+tensorflow-cpu==2.15.0
+Pillow==10.2.0
+matplotlib==3.8.3
+seaborn==0.13.2
+tqdm==4.66.2
+plotly==5.19.0
